Server code cleanup (#67)
* Wrap existing labels in a z-level'd div.

* Changed label of "skills2e" in 2E card template to "skill-box" since 1E and 2E skills are processed the same

* * Consolidated EffectProcessors that append actions to a card blueprint into the ActionSourceAppender class.
* Removed unused EffectProcessors. Moved processor of JSON "seed" data into an ActionSourceAppender.
* Updated JSON syntax to classify effects of "trigger" type to be "action" type with a "trigger" property.

* Added blueprintId as JSON property to sets 105 and 106

* Moved simple text card properties from Java blueprints to JSON blueprints

* Expanded CardBlueprintLibrary test

* Removed unused EffectProcessors

* Renamed a couple classes that append to blueprints to more accurately represent what they are doing

* Added CardBlueprintDeserializer class to consolidate basic card blueprint deserialization. Added a couple methods to CardBlueprintLibrary so that this process can be chosen in the code instead of the CardBlueprintFactory.

* Removed unused ModifierSourceProducers from modifierProducers map in ModifierSourceFactory

* Moved a ton of files around in preparation to reduce number of deserializer classes

* Moved ModifierSource into the ModifierSource package

* Add backend test script on PR.

* Do not hard code resources path to /etc

* Cleaned up constructors in CardResolver

* Move test dependencies to the main pom file to force dep versions across subprojects.

* Turn on GH test debugging, clean up dependencies.

* Force latest surefire plugin.

* Remove debug call.

* Consolidated some of the card resolver appender producer classes

* Consolidating more effect appender producers

* Added tests to cycle through a game until you get to the play phase

* Added a basic test to initialize a Tribbles game

* Added some more Premiere card definitions to fill out 2PG for testing

* - Added more detailed comments to gemp-stccg